--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,12 @@ torch
 transformers
 matplotlib
 scikit-learn
-jsons
+spacy
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0.tar.gz#egg=en_core_web_sm-3.2.0
+json
 IPython
 torchaudio
 librosa
 moviepy
 fairseq
+nltk
